// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`presentational.code-block basic usage 2`] = `
NodeList [
  <style>
    styles.shadow.css
  </style>,
  <pre
    class="shiki light-plus"
    part="pre"
    style="background-color: rgb(255, 255, 255); color: rgb(0, 0, 0);"
    tabindex="0"
  >
    <code>
      <span
        class="line"
      >
        <span
          style="color: rgb(0, 16, 128);"
        >
          console
        </span>
        <span
          style="color: rgb(0, 0, 0);"
        >
          .
        </span>
        <span
          style="color: rgb(121, 94, 38);"
        >
          log
        </span>
        <span
          style="color: rgb(0, 0, 0);"
        >
          (
        </span>
        <span
          style="color: rgb(163, 21, 21);"
        >
          'Hello'
        </span>
        <span
          style="color: rgb(0, 0, 0);"
        >
          );
        </span>
      </span>
    </code>
    <eo-button
      class="copy"
      icon="[object Object]"
      part="copy"
    />
  </pre>,
]
`;

exports[`presentational.code-block mermaid in markdown 1`] = `
NodeList [
  <style>
    styles.shadow.css
  </style>,
  <pre
    class="shiki dark-plus"
    part="pre"
    style="background-color: rgb(30, 30, 30); color: rgb(212, 212, 212);"
    tabindex="0"
  >
    <code>
      <span
        class="line"
      >
        <span
          style="color: rgb(212, 212, 212);"
        >
          \`\`\`mermaid
        </span>
      </span>
      

      <span
        class="line"
      >
        <span
          style="color: rgb(197, 134, 192);"
        >
          sequenceDiagram
        </span>
      </span>
      

      <span
        class="line"
      >
        <span
          style="color: rgb(156, 220, 254);"
        >
              Alice
        </span>
        <span
          style="color: rgb(197, 134, 192);"
        >
          -&gt;&gt;
        </span>
        <span
          style="color: rgb(156, 220, 254);"
        >
          John
        </span>
        <span
          style="color: rgb(197, 134, 192);"
        >
          :
        </span>
        <span
          style="color: rgb(206, 145, 120);"
        >
           Hello John, how are you?
        </span>
      </span>
      

      <span
        class="line"
      >
        <span
          style="color: rgb(156, 220, 254);"
        >
              John
        </span>
        <span
          style="color: rgb(197, 134, 192);"
        >
          --&gt;&gt;
        </span>
        <span
          style="color: rgb(156, 220, 254);"
        >
          Alice
        </span>
        <span
          style="color: rgb(197, 134, 192);"
        >
          :
        </span>
        <span
          style="color: rgb(206, 145, 120);"
        >
           Great!
        </span>
      </span>
      

      <span
        class="line"
      >
        <span
          style="color: rgb(212, 212, 212);"
        >
          \`\`\`
        </span>
      </span>
    </code>
  </pre>,
]
`;
